--- a/static/scss/button.scss
+++ b/static/scss/button.scss
@@ -154,6 +154,7 @@ button
 
     .dark-background &
     , .dark-background-1 &
+    , .dark-mode &
     {
       &.v2
       {
@@ -196,6 +197,7 @@ button
 
     .dark-background &
     , .dark-background-1 &
+    , .dark-mode &
     {
       /* 🎨 style */
       background-color: var(--dark-theme-1-4-shade);
