--- a/static/scss/layout.scss
+++ b/static/scss/layout.scss
@@ -11,6 +11,7 @@
   overflow: hidden;
 
   .dark-background &
+  , .dark-mode &
   {
     /* 🎨 style */
     background-color: var(--dark-theme-1) !important;
