--- a/static/scss/misc.scss
+++ b/static/scss/misc.scss
@@ -84,6 +84,7 @@ form
     }
 
     .dark-background-1 &
+    , .dark-mode &
     {
       border: 1px solid var(--dark-theme-1-2-shade);
 
@@ -181,7 +182,8 @@ img.google-aspect-ratio
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
 .dark-background .hover-color-primary:hover,
-.dark-background-1 .hover-color-primary:hover {
+.dark-background-1 .hover-color-primary:hover,
+.dark-mode .hover-color-primary:hover {
   /* 🎨 style */
   color: var(--primary) !important;
 }
