--- a/static/themes/dark.scss
+++ b/static/themes/dark.scss
@@ -2,6 +2,8 @@
 {
   --text-color: #FFFFFF;
   --text-color-second: #CCCCCC;
+  --text-color-second-dark: #8C8C8C;
+
   --bg-color: #292929;
   --bg-color-second: #313131;
   --border-color-light: #4B4B4B;
