--- a/static/app.css
+++ b/static/app.css
@@ -3136,6 +3136,7 @@ img.google-aspect-ratio {
 .dark-mode {
   --text-color: #FFFFFF;
   --text-color-second: #CCCCCC;
+  --text-color-second-dark: #8C8C8C;
   --bg-color: #292929;
   --bg-color-second: #313131;
   --border-color-light: #4B4B4B;
