fixes tags scroll arrows

--- a/static/themes/dark.scss
+++ b/static/themes/dark.scss
@@ -4,8 +4,12 @@
   --text-color-second: #CCCCCC;
   --text-color-second-dark: #8C8C8C;
 
-  --bg-color: #292929;
-  --bg-color-second: rgb(49, 49, 49);
+  --bg-color-rgb-consts: 41, 41, 41;
+  --bg-color: rgb(var(--bg-color-rgb-consts));
+
+  --bg-color-second-rgb-consts: 49, 49, 49;
+  --bg-color-second: rgb(var(--bg-color-second-rgb-consts));
+
   --border-color-light: #4B4B4B;
   --border-color: #4B4B4B;
   --bg-hover-color: #4B4B4B;
@@ -13,8 +17,4 @@
   --tag-bg-color: #4B4B4B;
 
   --section-border: 1px solid var(--border-color);
-
-  --gradient-color-light: rgba(49, 49, 49, 0);
-  --gradient-color-medium: rgba(49, 49, 49, 0.6);
-  --gradient-color-dark: rgba(49, 49, 49, 1);
 }
