--- a/static/themes/light.scss
+++ b/static/themes/light.scss
@@ -2,8 +2,13 @@
 {
   --text-color: #292929;
   --text-color-second: #292929;
-  --bg-color: #FFF;
-  --bg-color-second: rgb(247, 247, 247);
+
+  --bg-color-rgb-consts: 255, 255, 255;
+  --bg-color: rgb(var(--bg-color-rgb-consts));
+
+  --bg-color-second-rgb-consts: 247, 247, 247;
+  --bg-color-second: rgb(var(--bg-color-second-rgb-consts));
+
   --border-color-light: #E6E6E6;
   --border-color: #292929;
   --bg-hover-color: #E6E6E6;
@@ -11,8 +16,4 @@
   --tag-bg-color: #E6E6E6;
 
   --section-border: 1px solid var(--border-color-light);
-
-  --gradient-color-light: rgba(247, 247, 247, 0);
-  --gradient-color-medium: rgba(247, 247, 247, 0.6);
-  --gradient-color-dark: rgba(247, 247, 247, 1);
 }
