--- a/static/app.css
+++ b/static/app.css
@@ -3133,4 +3133,29 @@ img.google-aspect-ratio {
   color: var(--primary) !important;
 }
 
+.dark-mode {
+  --text-color: #FFFFFF;
+  --text-color-second: #CCCCCC;
+  --text-color-second-dark: #8C8C8C;
+  --bg-color: #292929;
+  --bg-color-second: #313131;
+  --border-color-light: #4B4B4B;
+  --border-color: #4B4B4B;
+  --bg-hover-color: #4B4B4B;
+  --tag-bg-color: #4B4B4B;
+  --section-border: 1px solid var(--border-color);
+}
+
+.light-mode {
+  --text-color: #292929;
+  --text-color-second: #292929;
+  --bg-color: #FFF;
+  --bg-color-second: #F7F7F7;
+  --border-color-light: #E6E6E6;
+  --border-color: #292929;
+  --bg-hover-color: #E6E6E6;
+  --tag-bg-color: #E6E6E6;
+  --section-border: 1px solid var(--border-color-light);
+}
+
 /*# sourceMappingURL=app.css.map */
