--- a/static/themes/light.scss
+++ b/static/themes/light.scss
@@ -3,7 +3,7 @@
   --text-color: #292929;
   --text-color-second: #292929;
 
-  --icon-color: var(--text-color);
+  --icon-color: rgba(140, 140, 140, 1);
 
   --bg-color-rgb-consts: 255, 255, 255;
   --bg-color: rgb(var(--bg-color-rgb-consts));
