--- a/static/themes/dark.scss
+++ b/static/themes/dark.scss
@@ -3,7 +3,8 @@
   --text-color-second: #CCCCCC;
   --text-color-second-dark: #8C8C8C;
 
-  --icon-color: var(--text-color);
+  --icon-color: rgba(140, 140, 140, 1);
+  --icon-color-light: rgba(140, 140, 140, 1);
 
   --bg-color-rgb-consts: 41, 41, 41;
   --bg-color: rgb(var(--bg-color-rgb-consts));
