--- a/static/themes/dark.scss
+++ b/static/themes/dark.scss
@@ -1,13 +1,15 @@
 .dark-mode {
   --text-color: #FFFFFF;
-  --text-color-second: #CCCCCC;
-  --text-color-second-dark: #8C8C8C;
+  --text-color-second: rgb(204, 204, 204);
+  --text-color-second-dark: #8c8c8c;
 
   --icon-color: rgba(140, 140, 140, 1);
   --icon-color-light: rgba(140, 140, 140, 1);
 
   --bg-color-rgb-consts: 41, 41, 41;
   --bg-color: rgb(var(--bg-color-rgb-consts));
+
+  --layout-bg-color: rgba(29, 29, 29, 1);
 
   --bg-color-second-rgb-consts: 49, 49, 49;
   --bg-color-second: rgb(var(--bg-color-second-rgb-consts));
