--- a/static/themes/light.scss
+++ b/static/themes/light.scss
@@ -3,6 +3,8 @@
   --text-color: #292929;
   --text-color-second: #292929;
 
+  --icon-color: rgba(140, 140, 140, 1);
+
   --bg-color-rgb-consts: 255, 255, 255;
   --bg-color: rgb(var(--bg-color-rgb-consts));
 
@@ -16,4 +18,9 @@
   --tag-bg-color: #E6E6E6;
 
   --section-border: 1px solid var(--border-color-light);
+
+  //Mobile-Menu
+  --mobile-menu-bg-color:  rgba(var(--bg-color-rgb-consts), 0.9);
+  --box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.15);
+
 }
