Feature/articles content (#2121)
* fix: userguid modal (#2096)

* Fix/tag links/draft/0 (#2098)

* Fix/tutorial popup/draft/0 (#2099)

* fix: userguid modal

* fix: body  scroll

* fix: prevent articles with same id (#2102)

* Feature/bottom menu/draft/0 (#2103)

* dev: mobile menu

* dev: mobile menu d'n'd

* dev: popup styles

* dev: dragged style

* dev: modal mouse events

* [dev] Mobile menu

* dev: change bottom position

* dev: mobile menu threshold

* fix: disable drag out

* remove unused code

* Feature/bottom menu/draft/0 (#2104)

* dev: mobile menu

* dev: mobile menu d'n'd

* dev: popup styles

* dev: dragged style

* dev: modal mouse events

* [dev] Mobile menu

* dev: change bottom position

* dev: mobile menu threshold

* fix: disable drag out

* remove unused code

* remove yarn.lock

* remove yarn lock

* fix: canonical link (#2105)

* fix reopen userguide (#2106)

* Feature/bottom menu/draft/0 (#2107)

* dev: mobile menu

* dev: mobile menu d'n'd

* dev: popup styles

* dev: dragged style

* dev: modal mouse events

* [dev] Mobile menu

* dev: change bottom position

* dev: mobile menu threshold

* fix: disable drag out

* remove unused code

* remove yarn.lock

* icons color

* dev: mobile menu

* dev: blur popup background

* dev: tabbar, new header & section

* content layou & new footer/header

* content page & footer & header css

* dev: fetch

* dev web sizes

* dev links for wallet and buy button

* dev articles tags without padding in mobile

* articles title in 3 line in mobile

* tablet title in 3 lines

* update mobile menu links to content section

* tablet tags approach

* Prevent logo global styles

* Header navigation block and dropdowns

* prevent content section global svg styles

* load more content articles

* change translations

* loads articles

* Load tags invalidation

* content SEO

* tags ali

--- a/static/themes/light.scss
+++ b/static/themes/light.scss
@@ -2,11 +2,16 @@
 {
   --text-color: #292929;
   --text-color-second: #292929;
+  --text-color-second-dark: #8c8c8c;
+
+  --icon-color: rgba(140, 140, 140, 1);
 
   --icon-color: rgba(140, 140, 140, 1);
 
   --bg-color-rgb-consts: 255, 255, 255;
   --bg-color: rgb(var(--bg-color-rgb-consts));
+
+  --layout-bg-color: #E6E6E6;
 
   --bg-color-second-rgb-consts: 247, 247, 247;
   --bg-color-second: rgb(var(--bg-color-second-rgb-consts));
@@ -18,6 +23,8 @@
   --tag-bg-color: #E6E6E6;
 
   --section-border: 1px solid var(--border-color-light);
+  --border: 1px solid #CCC;
+  --header-border: 1px solid #CCC;
 
   //Mobile-Menu
   --mobile-menu-bg-color:  rgba(var(--bg-color-rgb-consts), 0.9);
