--- a/static/app.scss
+++ b/static/app.scss
@@ -19,5 +19,5 @@ are generally used throughout the project in a consistant and repetetive manner.
 @import './scss/misc.scss';
 
 // themes vars
-@import './themes/dark.scss';
-@import './themes/light.scss';
+// @import './themes/dark.scss';
+// @import './themes/light.scss';
