--- a/static/scss/themes/dark.scss
+++ b/static/scss/themes/dark.scss
@@ -1,13 +1,18 @@
 .dark-mode {
   --text-color: #FFFFFF;
-  --text-color-second: #CCCCCC;
-  --text-color-second-dark: #8C8C8C;
+  --text-color-second: rgb(204, 204, 204);
+  --text-color-second-dark: #8c8c8c;
+
+  --icon-color: #8c8c8c;
+  --icon-color-light: rgba(140, 140, 140, 1);
 
   --icon-color: rgba(140, 140, 140, 1);
   --icon-color-light: rgba(140, 140, 140, 1);
 
   --bg-color-rgb-consts: 41, 41, 41;
   --bg-color: rgb(var(--bg-color-rgb-consts));
+
+  --layout-bg-color: rgba(29, 29, 29, 1);
 
   --bg-color-second-rgb-consts: 49, 49, 49;
   --bg-color-second: rgb(var(--bg-color-second-rgb-consts));
@@ -19,6 +24,8 @@
   --tag-bg-color: #4B4B4B;
 
   --section-border: 1px solid var(--border-color);
+  --border: 1px solid var(--border-color);
+  --header-border: 1px solid #383838;
 
   //Mobile-Menu
   --mobile-menu-bg-color: rgba(var(--bg-color-second-rgb-consts), 0.7);
