--- a/static/scss/themes/dark.scss
+++ b/static/scss/themes/dark.scss
@@ -1,13 +1,10 @@
 .dark-mode {
   --text-color: #FFFFFF;
-  --text-color-second: rgb(204, 204, 204);
+  --text-color-second: #cccccc;
   --text-color-second-dark: #8c8c8c;
 
   --icon-color: #8c8c8c;
-  --icon-color-light: rgba(140, 140, 140, 1);
-
-  --icon-color: rgba(140, 140, 140, 1);
-  --icon-color-light: rgba(140, 140, 140, 1);
+  --icon-color-light: #A8A8A8;
 
   --bg-color-rgb-consts: 41, 41, 41;
   --bg-color: rgb(var(--bg-color-rgb-consts));
@@ -33,4 +30,8 @@
   --box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.5);
   ;
 
+
+  //colors
+  --popup-bg-color: #4b4b4b;
+  --popup-contrast-color: #3E3E3E;
 }
