--- a/static/scss/themes/light.scss
+++ b/static/scss/themes/light.scss
@@ -20,7 +20,7 @@
   --border-color: #292929;
   --bg-hover-color: #E6E6E6;
 
-  --tag-bg-color: #E6E6E6;
+  --button-secondary-bg: #E6E6E6;
 
   --section-border: 1px solid var(--border-color-light);
   --border: 1px solid #CCC;
