--- a/static/scss/themes/dark.scss
+++ b/static/scss/themes/dark.scss
@@ -18,7 +18,7 @@
   --border-color: #4B4B4B;
   --bg-hover-color: #4B4B4B;
 
-  --tag-bg-color: #4B4B4B;
+  --button-secondary-bg: #4B4B4B;
 
   --section-border: 1px solid var(--border-color);
   --border: 1px solid var(--border-color);
@@ -30,6 +30,7 @@
   --box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.5);
   ;
 
+  --tag-bg: #4B4B4B;
 
   //colors
   --popup-bg-color: #4b4b4b;
