--- a/static/scss/themes/light.scss
+++ b/static/scss/themes/light.scss
@@ -20,7 +20,7 @@
   --border-color: #292929;
   --bg-hover-color: #E6E6E6;
 
-  --tag-bg-color: #E6E6E6;
+  --button-secondary-bg: #F0F0F0;
 
   --section-border: 1px solid var(--border-color-light);
   --border: 1px solid #CCC;
@@ -30,6 +30,7 @@
   --mobile-menu-bg-color:  rgba(var(--bg-color-rgb-consts), 0.9);
   --box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.15);
 
+  --tag-bg: #E6E6E6;
   //colors
   --popup-bg-color: #fff;
   --popup-contrast-color: #E6E6E6;
