feature: Author sportstack list

--- a/static/scss/themes/light.scss
+++ b/static/scss/themes/light.scss
@@ -35,5 +35,129 @@
   --popup-bg-color: #fff;
   --popup-contrast-color: #E6E6E6;
   --popup-hover-color: #F2F2F2
+}
 
+.light-mode {
+  /* 1. COLORS */
+  --background-bg-primary: var(--colors-base-white);
+  --background-bg-secondary: var(--colors-gray-1);
+  --background-bg-primary_hover: var(--colors-gray-1);
+  --background-bg-secondary_hover: var(--colors-gray-2);
+  --background-bg-tertiary: var(--colors-gray-2);
+  --background-bg-tertiary_hover: var(--colors-gray-3);
+  --background-bg-brand-solid: var(--colors-brand-5);
+  --text-text-primary: var(--colors-gray-7);
+  --text-text-secondary: var(--colors-gray-6);
+  --text-text-tertiary: var(--colors-gray-5);
+  --text-text-white: var(--colors-base-white);
+  --button-primary-button-primary-bg: var(--colors-brand-5);
+  --button-primary-button-primary-bg_hover: var(--colors-brand-4);
+  --button-primary-button-primary-text: var(--text-text-white);
+  --foreground-fg-white: var(--colors-base-white);
+  --border-border-brand: var(--colors-brand-4);
+  --border-border-brand-subtle: var(--colors-brand-3);
+  --foreground-fg-primary: var(--colors-gray-6);
+  --foreground-fg-secondary: var(--colors-gray-5);
+  --foreground-fg-tertiary: var(--colors-gray-4);
+  --text-text-disabled: var(--colors-gray-2);
+  --text-text-placeholder: var(--colors-gray-3);
+  --border-border-primary: var(--colors-gray-4);
+  --border-border-secondary: var(--colors-gray-3);
+  --button-link-brand-button-link-brand-color: var(--colors-brand-5);
+  --button-link-brand-button-link-brand-color-fg: var(--colors-brand-5);
+  --button-link-brand-button-link-brand-color_hover: var(--colors-brand-6);
+  --foreground-fg-disabled: var(--colors-gray-3);
+  --button-link-gray-button-link-gray-color: var(--colors-gray-5);
+  --button-link-gray-button-link-gray-color_hover: var(--colors-brand-5);
+  --button-link-gray-button-link-gray-color-fg: var(--colors-gray-5);
+  --button-secondary-outline-brand-button-secondary-brand-border: var(--colors-brand-5);
+  --button-secondary-outline-brand-button-secondary-brand-border_hover: var(--colors-brand-4);
+  --button-secondary-outline-brand-button-secondary-brand-text: var(--colors-brand-5);
+  --button-secondary-outline-brand-button-secondary-brand-text_hover: var(--colors-brand-4);
+  --button-secondary-outline-brand-button-secondary-brand-fg: var(--colors-brand-5);
+  --button-secondary-outline-brand-button-secondary-brand-fg_hover: var(--colors-brand-4);
+  --background-bg-disabled: var(--colors-gray-1);
+  --border-border-disabled: var(--colors-gray-2);
+  --button-secondary-outline-negative-button-secondary-negative-border: var(--colors-gray-5);
+  --button-secondary-outline-negative-button-secondary-negative-border_hover: var(--colors-brand-5);
+  --button-secondary-outline-negative-button-secondary-negative-text: var(--colors-gray-5);
+  --button-secondary-outline-negative-button-secondary-negative-text_hover: var(--colors-brand-5);
+  --button-secondary-outline-negative-button-secondary-negative-fg: var(--colors-gray-5);
+  --button-secondary-outline-negative-button-secondary-negative-fg_hover: var(--colors-brand-5);
+  --border-border-brand-solid: var(--colors-brand-5);
+  --badge-gray-badge-gray-bg: var(--background-bg-tertiary);
+  --badge-gray-badge-gray-text: var(--colors-gray-5);
+  --badge-gray-badge-gray-fg: var(--colors-gray-4);
+  --background-bg-error-solid: var(--colors-error-5);
+  --button-secondary-filled-button-secondary-filled-bg: var(--colors-gray-5);
+  --button-secondary-filled-button-secondary-filled-bg_hover: var(--colors-gray-6);
+  --button-secondary-filled-button-secondary-filled-text: var(--text-text-white);
+  --button-primary-success-button-primary-success-bg: var(--colors-success-5);
+  --button-primary-success-button-primary-success-bg_hover: var(--colors-success-4);
+  --button-primary-success-button-primary-success-text: var(--text-text-white);
+  --background-bg-warning-solid: var(--colors-warning-5);
+  --background-bg-success-solid: var(--colors-success-5);
+  --button-secondary-outline-gray-button-secondary-gray-border: var(--colors-gray-2);
+  --button-secondary-outline-gray-button-secondary-gray-border_hover: var(--colors-brand-5);
+  --button-secondary-outline-gray-button-secondary-gray-text: var(--colors-gray-5);
+  --button-secondary-outline-gray-button-secondary-gray-text_hover: var(--colors-brand-5);
+  --button-secondary-outline-gray-button-secondary-gray-fg: var(--colors-gray-5);
+  --button-secondary-outline-gray-button-secondary-gray-fg_hover: var(--colors-brand-5);
+  --foreground-fg-disabled-subtle: var(--colors-gray-2);
+  --text-text-quarternary: var(--colors-gray-4);
+  --text-text-error-primary: var(--colors-error-5);
+  --border-border-error: var(--colors-error-5);
+  --text-text-quinary: var(--colors-gray-3);
+  --foreground-fg-brand-primary: var(--colors-brand-5);
+  --background-bg-brand-primary: var(--colors-brand-1);
+  --text-text-error-secondary: var(--colors-error-4);
+  --text-text-brand-primary: var(--colors-brand-5);
+  --text-text-brand-secondary: var(--colors-brand-4);
+  --background-bg-brand-secondary: var(--colors-brand-2);
+  --foreground-fg-success-primary: var(--colors-success-5);
+  --foreground-fg-success-secondary: var(--colors-success-4);
+  --background-bg-success-primary: var(--colors-success-1);
+  --background-bg-success-secondary: var(--colors-success-2);
+  --background-bg-error-primary: var(--colors-error-1);
+  --background-bg-error-secondary: var(--colors-error-2);
+  --foreground-fg-error-primary: var(--colors-error-5);
+  --foreground-fg-error-secondary: var(--colors-error-4);
+  --badge-brand-badge-brand-bg: var(--background-bg-brand-primary);
+  --badge-brand-badge-brand-text: var(--colors-brand-5);
+  --badge-brand-badge-brand-fg: var(--colors-brand-4);
+  --border-border-tertiary: var(--colors-gray-2);
+  --badge-error-badge-error-bg: var(--background-bg-error-primary);
+  --badge-error-badge-error-text: var(--text-text-error-secondary);
+  --badge-error-badge-error-fg: var(--text-text-error-secondary);
+  --button-primary-error-button-primary-error-bg: var(--colors-error-5);
+  --button-primary-error-button-primary-error-bg_hover: var(--colors-error-4);
+  --button-primary-error-button-primary-error-text: var(--text-text-white);
+  --button-secondary-outline-error-button-secondary-error-border: var(--colors-error-5);
+  --button-secondary-outline-error-button-secondary-error-border_hover: var(--colors-error-4);
+  --button-secondary-outline-error-button-secondary-error-text: var(--colors-error-5);
+  --button-secondary-outline-error-button-secondary-error-text_hover: var(--colors-error-4);
+  --button-secondary-outline-error-button-secondary-error-fg: var(--colors-error-5);
+  --button-secondary-outline-error-button-secondary-error-fg_hover: var(--colors-error-4);
+  --button-link-error-button-link-error-color: var(--colors-error-5);
+  --button-link-error-button-link-error-color_hover: var(--colors-error-6);
+  --button-link-error-button-link-error-color-fg: var(--colors-error-5);
+  --input-input-bg: var(--background-bg-primary);
+  --input-input-border: #cccccc;
+  --input-input-border_focus: var(--border-border-brand-solid);
+  --input-input-border_hover: var(--border-border-primary);
+  --input-input-text: var(--border-border-secondary);
+  --input-input-text-filled: var(--text-text-primary);
+  --input-input-text-error: var(--text-text-error-secondary);
+  --foreground-fg-brand-secondary: var(--colors-brand-4);
+  --foreground-fg-warning-primary: var(--colors-warning-5);
+  --foreground-fg-warning-secondary: var(--colors-warning-4);
+  --text-text-success-primary: var(--colors-success-5);
+  --text-text-success-secondary: var(--colors-success-4);
+  --text-text-warning-primary: var(--colors-warning-5);
+  --text-text-warning-secondary: var(--colors-warning-4);
+  --text-text-senary: var(--colors-gray-2);
+  --background-bg-white: var(--colors-base-white);
+  --background-bg-quarterary: var(--colors-gray-3);
+  --background-bg-quarterary_hover: var(--colors-gray-4);
+  --colors-text-text-primary-900: #313131;
 }
