refactor: Update button secondary styles in dark and light themes

--- a/static/scss/themes/dark.scss
+++ b/static/scss/themes/dark.scss
@@ -161,4 +161,8 @@
   --colors-text-text-primary-900: #F5F5F6;
   --colors-text-text-secondary-700: #696969;
 
+  --button-secondary-bg2: #313131;
+  --button-secondary-border: #525252;
+ --button-secondary-fg: #D2D2D2;
+
 }
