--- a/static/scss/themes/light.scss
+++ b/static/scss/themes/light.scss
@@ -160,4 +160,7 @@
   --background-bg-quarterary: var(--colors-gray-3);
   --background-bg-quarterary_hover: var(--colors-gray-4);
   --colors-text-text-primary-900: #313131;
+  --button-secondary-bg2: #FFFFFF;
+    --button-secondary-border: #D2D2D2;
+    --button-secondary-fg: var(--text-text-secondary);
 }
