--- a/static/app.css
+++ b/static/app.css
@@ -3283,6 +3283,9 @@ img.google-aspect-ratio {
   --background-bg-quarterary_hover: var(--colors-gray-5);
   --colors-text-text-primary-900: #F5F5F6;
   --colors-text-text-secondary-700: #696969;
+  --button-secondary-bg2: #313131;
+  --button-secondary-border: #525252;
+  --button-secondary-fg: #D2D2D2;
 }
 
 .light-mode {
@@ -3434,6 +3437,9 @@ img.google-aspect-ratio {
   --background-bg-quarterary: var(--colors-gray-3);
   --background-bg-quarterary_hover: var(--colors-gray-4);
   --colors-text-text-primary-900: #313131;
+  --button-secondary-bg2: #FFFFFF;
+  --button-secondary-border: #D2D2D2;
+  --button-secondary-fg: var(--text-text-secondary);
 }
 
 /*# sourceMappingURL=app.css.map */
