--- a/static/scss/themes/light.scss
+++ b/static/scss/themes/light.scss
@@ -162,7 +162,7 @@
   --colors-text-text-primary-900: #313131;
   --button-secondary-bg2: #FFFFFF;
   --button-secondary-border: #D2D2D2;
-    --button-secondary-fg: var(--text-text-secondary);
+    --button-secondary-fg: #525252;
   --colors-background-bg-quaternary: #EDEDED;
     --colors-foreground-fg-secondary-700: #525252;
     --colors-border-border-secondary: #E6E6E6;
