--- a/static/scss/themes/dark.scss
+++ b/static/scss/themes/dark.scss
@@ -180,4 +180,6 @@
   --component-colors-utility-gray-utility-gray-200: #525252;
   --component-colors-utility-gray-utility-gray-50: #313131;
   --component-colors-utility-gray-utility-gray-700: #D2D2D2;
+  --Colors-Effects-Shadows-shadow-lg_01: rgba(255, 255, 255, 0.00);
+    --Colors-Effects-Shadows-shadow-lg_02: rgba(255, 255, 255, 0.00);
 }
