--- a/static/scss/themes/light.scss
+++ b/static/scss/themes/light.scss
@@ -178,4 +178,6 @@
     --component-colors-utility-gray-utility-gray-200: #EDEDED;
     --component-colors-utility-gray-utility-gray-50: #FBFBFB;
     --component-colors-utility-gray-utility-gray-700: #525252;
+    --Colors-Effects-Shadows-shadow-lg_01: rgba(31, 31, 31, 0.08);
+      --Colors-Effects-Shadows-shadow-lg_02: rgba(31, 31, 31, 0.03);
 }
